Fix spacing in the Related posts

--- a/static/css/components/related.css
+++ b/static/css/components/related.css
@@ -3,14 +3,3 @@
   padding-block-start: var(--space-md);
   border-top: var(--border);
 }
-
-.related-posts-item {
-  line-height: var(--line-height-large);
-}
-
-/* Hide mobile fallback when sidebar is visible */
-/* @media screen and (min-width: 1024px) {
-  .related-posts-mobile {
-    display: none;
-  }
-} */
